--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
       <h1>Температура в разных городах</h1>
     </header>
-    <main></main>
+    <main>
+      <ul id="listOfCities"></ul>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
