--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </header>
     <main>
       <ul id="listOfCities"></ul>
+      <div id="higherTemperature"></div>
+      <div id="lowerTemperature"></div>
     </main>
     <script src="script.js"></script>
   </body>
